# midnight-scavenger-miner

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  main.rs  miner.rs  submitter.rs  types.rs  utils.rs
