[package]
name = "miner"
version = "0.1.0"
edition = "2024"

[dependencies]
ashmaize = { git = "https://github.com/input-output-hk/ce-ashmaize" }
hex = "0.4.3"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
mongodb = { version = "3.3.0", features = ["sync"] }
reqwest= { version = "0.12.24", features = ["json", "blocking"] }